fix errors flagged by findbugs